[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "3.2.0"
sha2 = "0.9.8"
rustc-serialize = "0.3"
hex="0.4.3"
rand_core = { version = "0.5", features = ["std"] }
rand = "0.8.5"
bls12_381 = "0.8.0"
pairing-plus = "0.19.0"
